--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,3 +1,5 @@
+@import 'config';
+
 .menu-btn {
   position: absolute;
   z-index: 3;
@@ -29,6 +31,61 @@
       &:nth-child(3) {
         transform: rotate(-45deg) translate(7px, -6px);
       }
+    }
+  }
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: darken($primary-color, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  &-branding {
+    background: $primary-color;
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+
+    .portrait {
+      width: 25rem;
+      height: 25rem;
+      background: url('../img/profile.jpg');
+      border-radius: 50%;
+      border: solid 0.3rem $secondary-color;
     }
   }
 }
