--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,7 @@ html {
 body {
   background: $primary-color;
   @include background();
-  color: white;
+  color: rgb(253, 253, 253);
   height: 100%;
   margin: 0;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -40,7 +40,7 @@ h3 {
 }
 
 a {
-  color: white;
+  color: rgb(220, 231, 229);
   text-decoration: none;
 }
 
