--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -84,8 +84,39 @@
       width: 25rem;
       height: 25rem;
       background: url('../img/profile.jpg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
       border-radius: 50%;
       border: solid 0.3rem $secondary-color;
+    }
+  }
+
+  .nav-item {
+    transform: translate3d(60rem, 0, 0);
+    @include easeOut;
+
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 3rem;
+    padding: 2rem 0;
+    font-weight: 30rem;
+    color: set-text-color($primary-color);
+    text-decoration: none;
+    @include easeOut;
+
+    &:hover {
+      color: $secondary-color;
     }
   }
 }
