Adding grid to the about page

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -111,7 +111,7 @@
     font-size: 3rem;
     padding: 2rem 0;
     font-weight: 30rem;
-    color: set-text-color($primary-color);
+    color: rgb(252, 252, 252);
     text-decoration: none;
     @include easeOut;
 
