--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-$primary-color: #444;
+$primary-color: rgb(68, 66, 66);
 $secondary-color: #279739;
 $show-home-image: true;
 $home-image: url(../img/cover.jpg);
