--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -48,6 +48,17 @@
       height: 15rem;
     }
   }
+
+  .about-info {
+    grid-template-areas:
+      'bioimage'
+      'bio'
+      'job1'
+      'job2'
+      'job3';
+
+    grid-template-columns: 1fr;
+  }
 }
 
 // Smartphones
