--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import 'config';
 @import 'menu';
-@import 'mobile';
 
 * {
   box-sizing: border-box;
@@ -13,7 +12,7 @@ html {
 body {
   background: $primary-color;
   @include background();
-  color: rgb(253, 253, 253);
+  color: white;
   height: 100%;
   margin: 0;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -57,7 +56,7 @@ header {
 
 main {
   padding: 4rem;
-  height: 100%;
+  min-height: calc(100vh - 6rem);
 
   .icons {
     margin-top: 1rem;
@@ -79,3 +78,49 @@ main {
     }
   }
 }
+
+.about-info {
+  display: grid;
+  row-gap: 3rem;
+  column-gap: 3rem;
+  grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.bio-image {
+  grid-area: bioimage;
+  margin: auto;
+  border-radius: 50%;
+  border: $secondary-color 0.3rem solid;
+}
+
+.bio {
+  grid-area: bio;
+  font-size: 1.6rem;
+}
+
+.job-1 {
+  grid-area: job1;
+}
+
+.job-2 {
+  grid-area: job2;
+}
+
+.job-3 {
+  grid-area: job3;
+}
+
+.job {
+  background: lighten($primary-color, 5);
+  padding: 1rem;
+  border-bottom: $secondary-color 0.5rem solid;
+}
+
+#main-footer {
+  text-align: center;
+  padding: 0.5rem;
+  background: black;
+}
+
+@import 'mobile';
